--- a/cotizador_acerta/templates/reportes/corredor_detail.html
+++ b/cotizador_acerta/templates/reportes/corredor_detail.html
@@ -33,6 +33,7 @@
 				<ul class="nav nav-stacked">
 					{% if usuario.groups.first.name == 'corredor' %}
 						<li><a href="#">Licencia <span class="pull-right badge bg-orange">{{corredor.licencia}}</spana></a></li>
+						<li><a href="#">Licencia <span class="pull-right badge bg-orange">{{corredor.ruc}}</spana></a></li>
 					{% endif %}
 					<li><a href="#">Correo <span class="pull-right badge bg-orange">{{usuario.email}}</span></a></li>
 					<li><a href="#">Cotizaciones <span class="pull-right badge bg-red">{{ num_cot }}</span></a></li>
