--- a/cotizador_acerta/templates/update_user_form.html
+++ b/cotizador_acerta/templates/update_user_form.html
@@ -80,6 +80,7 @@
                                 {% bootstrap_field form.ruc show_label=False %}
                                 {% bootstrap_field form.licencia show_label=False %}
                                 {% bootstrap_field form.email show_label=False %}
+                                {% bootstrap_field form.username show_label=False %}
 
                                 {% buttons %}
                                     <div class="col-md-3"></div>
@@ -103,6 +104,11 @@
 
 {% endblock content %}
 {% block custom_script %}
+<script type="text/javascript">
+    $(document).on("click", "#id_submit", function(e){
+        $("#id_username").val($("#id_email").val());
+    });
+</script>
 {% endblock custom_script %}
 
 
