--- a/cotizador_acerta/templates/update_user_form.html
+++ b/cotizador_acerta/templates/update_user_form.html
@@ -71,7 +71,9 @@
                     <div class="box-body">
                         <div class="col-md-1"></div>
                         <div class="col-md-10">
-                            {% bootstrap_form_errors form %}
+                            <div class="hidden">
+                                {% bootstrap_form_errors form %}
+                            </div>
                             <form action="" method="post" role="form" class="form-horizontal">
                                 {% csrf_token %}
 
