--- a/cotizador_acerta/templates/reportes/cotizaciones_list.html
+++ b/cotizador_acerta/templates/reportes/cotizaciones_list.html
@@ -29,6 +29,7 @@
 				    	<th>Marca</th>
 				    	<th>Modelo</th>
 				    	<th>Total</th>
+				    	<th>Status</th>
 				    	<th>Detalles</th>
 				    </tr>
 			    </thead>
@@ -39,6 +40,13 @@
 				      <td>{{ cotizacion.conductor.marca.nombre }}</td>
 				      <td>{{ cotizacion.conductor.modelo.nombre }}</td>
 				      <td> B/. {{ cotizacion.total }}</td>
+			            {% if cotizacion.status == 'Enviada' or cotizacion.status == 'Guardada' %}
+			            	<td><span class="badge bg-orange">{{ cotizacion.status }}</span></td>
+			      	  {% elif cotizacion.status == 'Aprobada' %}
+			            	<td><span class="badge bg-green">{{ cotizacion.status }}</span></td>
+			      	  {% else %}
+			            	<td><span class="pullbadge bg-red">{{ cotizacion.status }}</span></td>
+			            {% endif %}
 				      <td><a href="{% url 'cotizaciones_details' cotizacion.pk %}">Ver</a></td>
 				    </tr>
 			    {% endfor %}
@@ -49,6 +57,7 @@
 				    	<th>Marca</th>
 				    	<th>Modelo</th>
 				    	<th>Total</th>
+				    	<th>Status</th>
 				    	<th>Detalles</th>
 				    </tr>
 			    </tfoot>
