--- a/cotizador_acerta/templates/navbar.html
+++ b/cotizador_acerta/templates/navbar.html
@@ -47,7 +47,7 @@
 
               sideMenu = new SideMenu([
                 new SMLinkItem("Registrar Vendedor", "{% url 'register'%}"),
-                new SMLinkItem("Administrador", "{% url 'dashboard'%}"),
+                new SMLinkItem("Dashboard", "{% url 'dashboard'%}"),
                 new SMLinkItem("Mis Vendedores", "{% url 'vendedor_list'%}"),
                 new SMLinkItem("Mis Cotizaciones", "{% url 'cotizaciones_list'%}"),
                 new SMLinkItem("Cerrar Sesión", "{% url 'logout'%}"),
@@ -60,7 +60,7 @@
           if (group == "vendedor") {
 
               sideMenu = new SideMenu([
-                new SMLinkItem("Administrador", "{% url 'dashboard'%}"),
+                new SMLinkItem("Dashboard", "{% url 'dashboard'%}"),
                 new SMLinkItem("Mis Cotizaciones", "{% url 'cotizaciones_list'%}"),
                 new SMLinkItem("Cerrar Sesión", "{% url 'logout'%}"),
                 new SMButtonItem("Cerrar", function (e) {
@@ -145,25 +145,25 @@
               <a id="actions" href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Acciones &nbsp;<span class="caret"></span></a>
               <ul class="dropdown-menu" style="position: absolute;">
                 {% if user.is_authenticated and user.groups.all.0.name == 'super_admin' %}
-                  <li>
+                  <li style="float: right;">
                     <a href="{% url 'register'%}">Registrar Corredor</a>
                   </li>
                   <li role="separator" class="divider"></li>
-                  <li>
+                  <li style="float: right;">
                     <a href="{% url 'dashboard' %}">Administrador</a>
                   </li>
                   <li role="separator" class="divider"></li>
                   <li>
                     <a href="{% url 'corredor-vendedor-list' %}">Corredores y Vendedores</a>
                   </li>
-                  <li role="separator" class="divider"></li>
+                  <li role="separator" class="divider" style="float: right;"></li>
                 {% endif %}
                 {% if user.is_authenticated and user.groups.all.0.name == 'admin' %}
-                  <li>
+                  <li style="float: right;">
                     <a href="{% url 'register'%}">Registrar Corredor</a>
                   </li>
                   <li role="separator" class="divider"></li>
-                  <li>
+                  <li style="float: right;">
                     <a href="{% url 'corredor-vendedor-list' %}">Corredores y Vendedores</a>
                   </li>
                   <li role="separator" class="divider"></li>
@@ -173,13 +173,18 @@
                       <a href="{% url 'register'%}">Registrar Vendedor</a>
                   </li>
                   <li role="separator" class="divider"></li>
-                  <li>
-                    <a href="{% url 'dashboard' %}">Administrador</a>
+                  <li style="float: right;">
+                    <a href="{% url 'dashboard' %}">Dashboard</a>
                   </li>
                   <li style="float: right;">
                       <a href="{% url 'vendedor_list' %}">Mis Vendedores</a>
                   </li>
                   <li role="separator" class="divider"></li>
+                {% endif %}
+                {% if user.is_authenticated and user.groups.all.0.name == 'vendedor'  %}
+                  <li style="float: right;">
+                    <a href="{% url 'dashboard' %}">Dashboard</a>
+                  </li>
                 {% endif %}
                   <li style="float: right;">
                       <a href="{% url 'cotizaciones_list' %}">Mis Cotizaciones</a>
