--- a/cotizador_acerta/templates/reportes/dashboard.html
+++ b/cotizador_acerta/templates/reportes/dashboard.html
@@ -122,7 +122,7 @@
 	<div class="col-md-12">
 		<div class="box box-default color-palette-box">
 			<div class="box-header">
-				<h3 class="box-title"> Cotizaciones de Vendedores ACERTA Asociados</h3>
+				<h3 class="box-title"> Cotizaciones de Vendedores Asociados</h3>
 			</div>
 			<div class="box-body">
 			  <table id="example3" class="table table-bordered table-striped dataTable" role="grid" aria-describedby="example1_info">
