--- a/cotizador_acerta/templates/reportes/cotizaciones_list.html
+++ b/cotizador_acerta/templates/reportes/cotizaciones_list.html
@@ -46,7 +46,7 @@
 			      	  {% elif cotizacion.status == 'Aprobada' %}
 			            	<td><span class="badge bg-green">{{ cotizacion.status }}</span></td>
 			      	  {% else %}
-			            	<td><span class="pullbadge bg-red">{{ cotizacion.status }}</span></td>
+			            	<td><span class="badge bg-red">{{ cotizacion.status }}</span></td>
 			            {% endif %}
 				      <td><a href="{% url 'cotizaciones_details' cotizacion.pk %}">Ver</a></td>
 				      <td>
@@ -66,11 +66,11 @@
 		                  {% endif %}
 		                  <ul class="dropdown-menu" role="menu">
 		                  	{% if cotizacion.status == 'Guardada'%}
-		                    <li><a href="#"><i class="fa fa-send">  Enviar</i></a></li>
+		                    <li><a href="{% url 'send' cotizacion.pk %}"><i class="fa fa-send">  Enviar</i></a></li>
 		                    <li class="divider"></li>
 		                    {% endif %}
-		                    <li><a href="#"><i class="fa fa-check-circle" style="color: green;">  Aprobar</i></a></li>
-		                    <li><a href="#"><i class="fa fa-times-circle" style="color: red;">  Rechazar</i></a></li>
+		                    <li><a href="{% url 'change-status' cotizacion.pk 0 %}"><i class="fa fa-check-circle" style="color: green;">  Aprobar</i></a></li>
+		                    <li><a href="{% url 'change-status' cotizacion.pk 1 %}"><i class="fa fa-times-circle" style="color: red;">  Rechazar</i></a></li>
 		                  </ul>
 		                </div>
 				      </td>
