--- a/cotizador_acerta/templates/reportes/cotizaciones_list.html
+++ b/cotizador_acerta/templates/reportes/cotizaciones_list.html
@@ -1,5 +1,6 @@
 {% extends "administrador/base_admin.html" %}
 {% load static %}
+{% load humanize %}
 {% block title %}<title>Mis Cotizaciones</title>{% endblock title %}
 {% block extracss %}
 <link href="{% static 'plugins/datatables/dataTables.bootstrap.css' %}" rel="stylesheet">
@@ -40,7 +41,7 @@
 				      <td> {{ cotizacion.conductor.nombre }} {{ cotizacion.conductor.apellido }}</td>
 				      <td>{{ cotizacion.conductor.marca.nombre }}</td>
 				      <td>{{ cotizacion.conductor.modelo.nombre }}</td>
-				      <td> B/. {{ cotizacion.total }}</td>
+				      <td> B/. {{ cotizacion.total|intcomma }}</td>
 			            {% if cotizacion.status == 'Enviada' or cotizacion.status == 'Guardada' %}
 			            	<td><span class="badge bg-orange">{{ cotizacion.status }}</span></td>
 			      	  {% elif cotizacion.status == 'Aprobada' %}
